# locators-haskell

./: .ghci  .gitignore  LICENCE  LICENSE  Makefile  README.markdown  locators.cabal  stack.yaml
lib/Data/: Locator.hs
lib/Data/Locator/: Common.hs  English16.hs  Hashes.hs  Latin25.hs  Latin26.hs  Locators.hs
src/Data/: Locator.hs
src/Data/Locator/: Hashes.hs  Identifiers.hs  Locators.hs
tests/: TestSuite.hs  check.hs  snippet.hs
