cabal-version:       >= 1.10
name:                locators
version:             0.2.4.3
synopsis:            Human exchangable identifiers and locators
license:             BSD3
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2013-2017 Operational Dynamics Consulting, Pty Ltd and Others
category:            Other
tested-with:         GHC == 8.0
stability:           experimental

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base >= 4 && <5,
                     bytestring,
                     containers,
                     cryptohash,
                     cereal

  hs-source-dirs:    src
  include-dirs:      .

  exposed-modules:   Data.Locator
  other-modules:     Data.Locator.Hashes,
                     Data.Locator.Locators


  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -fprof-auto-top


test-suite           check
  type:              exitcode-stdio-1.0

  default-language:  Haskell2010

  build-depends:     base >= 4 && <5,
                     HUnit,
                     hspec,
                     hspec-expectations,
                     QuickCheck,
                     bytestring,
                     containers,
                     cryptohash,
                     cereal,
                     locators

  hs-source-dirs:    tests
  main-is:           check.hs
  other-modules:     TestSuite

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-do-bind

  include-dirs:      .

  ghc-prof-options:  -fprof-auto-top


source-repository    head
  type:              git
  location:          git@github.com:afcowie/locators.git


-- vim: set tabstop=21 expandtab:
